--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,8 @@ dependencies {
     compile 'org.slf4j:slf4j-api:1.7.25'
     compile 'org.slf4j:slf4j-log4j12:1.7.25'
     compile 'log4j:log4j:1.2.17'
+    compile 'org.hamcrest:hamcrest-core:1.3'
+    compile 'org.hamcrest:hamcrest-library:1.3'
 
     compile 'org.testng:testng:6.10'
     testCompile 'org.testng:testng:6.10'
